feat: added icon and README

--- a/src/CLI/PS2Bios.CLI.csproj
+++ b/src/CLI/PS2Bios.CLI.csproj
@@ -9,6 +9,7 @@
     <SelfContained>false</SelfContained>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
+    <ApplicationIcon>app.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
